# lmpc

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic.py  games.py  robust.py
src/lmpc/: __init__.py  juliapkg.json  lmpc.py  model.py
tests/: conftest.py  test_lmpc.py
